--- a/dashboard_project/leitos/templates/leitos/dashboard.html
+++ b/dashboard_project/leitos/templates/leitos/dashboard.html
@@ -47,6 +47,15 @@
 </div>
 
 <div class="row">
+    <div class="col-md-12 mb-4">
+        <div class="card p-3">
+            <h6>Evolução da Taxa de Ocupação SUS (%) por Região</h6>
+            <div id="chart-taxa-ocupacao-sus" style="height:420px;"></div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
   <div class="col-12">
     <div class="card p-3">
       <div class="d-flex justify-content-between align-items-center mb-2">
