--- a/dashboard_project/leitos/templates/leitos/base.html
+++ b/dashboard_project/leitos/templates/leitos/base.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<!--suppress HtmlUnknownTarget, HtmlUnknownTarget -->
 <html lang="pt-br">
 <head>
   <meta charset="utf-8"/>
@@ -9,11 +10,6 @@
   <style>
       body {
           background: #f0f2f4;
-      }
-      .btn-sm {
-          padding: 10px 12px !important;
-          font-size: 0.85rem !important;
-          line-height: 1.3 !important;
       }
       .container-fluid {
           margin-left: 105px;
